# SpatialCells

./: .buildinfo  .gitignore  0_Example1_Clustering.ipynb  0_Example2_Shape_Features.ipynb  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  spatialcells.html  spatialcells.measurements.html  spatialcells.plotting.html  spatialcells.preprocessing.html  spatialcells.spatial.html  spatialcells.utils.html  tutorials.html
.ipynb_checkpoints/: 0_example-checkpoint.ipynb
_modules/: index.html
_sources/: index.rst.txt  quickstart.rst.txt  spatialcells.measurements.rst.txt  spatialcells.preprocessing.rst.txt  spatialcells.utils.rst.txt  tutorials.rst.txt
_static/: conda.yaml
data/: example_gates.csv  tutorial5_Z147_1.ome.tif-rois.csv  tutorial5_boundary.csv  tutorial5_boundary.json
doc/: conf.py
docs/: conf.py  index.rst  quickstart.rst  spatialcells.rst  spatialcells.spatial.rst  tutorials.rst
examples/: 0_example.ipynb  0_example_basic.ipynb
spacells/: ROIs and Clustering-17083_spacells.ipynb  spacells.py  spacells_utils.py
spacells.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
spatialcells/: __init__.py
tutorial/: 0_tutorial_spatial_functions.html  0_tutorial_spatial_functions.ipynb  1_tutorial_measurements.html  2_tutorial_tumor_proliferation.html  3_tutorial_immune_infiltration_overlap.html  4_tutorial_macro_micro_regions.html  5_tutorial_import_export_omero.html  5_tutorial_import_export_omero.ipynb  (+3 more)
(+126 files in other folders)
