[tool.poetry]

name = "SpaCells"
version = "0.0.1"
description = "Spatial Analysis for Single-Cell Data"

license = "MIT"

authors = ["Guihong Wan <gwan@mgh.harvard.edu>"]

readme = "README.md"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

